src/objects/DObj2__c.object
<CustomObject>
    <description>Test12312345</description>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <type>Phone</type>
    </fields>
    <label>DObj2</label>
    <nameField>
        <label>DObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DObj2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Vaidationrule11</fullName>
        <active>true</active>
        <description>1</description>
        <errorConditionFormula>ISBLANK( Field3__c )</errorConditionFormula>
        <errorMessage>please enter a value</errorMessage>
    </validationRules>
</CustomObject>